# Federated-Harmony

./: FLKmeans.py  FLharmony.py  FedHarmony PBMC Example.ipynb  LICENSE  README.md  horizontal_pca_power_iteration.py  pyproject.toml  shared_functions.py
FedPCA/: __init__.py
data/: PBMC_ZS_batch.csv
notebooks/: FedHarmony_PBMC_Example.ipynb
src/federated_harmony/: __init__.py  fl_harmony.py  fl_kmeans.py
src/federated_harmony/fedpca/: __init__.py  horizontal_pca_power_iteration.py
